<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:background="@color/bottom_navigation_bg_color"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll_nav_index"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_nav_index"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/navigation_index_iv_status" />

        <TextView
            android:id="@+id/tv_nav_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_tv_nav_index"
            android:textColor="@drawable/navigation_tv_status"
            android:textSize="10sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_nav_weather"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_nav_weather"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/navigation_weather_iv_status" />

        <TextView
            android:id="@+id/tv_nav_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_tv_nav_weather"
            android:textColor="@drawable/navigation_tv_status"
            android:textSize="10sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_nav_person"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_nav_person"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/navigation_person_iv_status" />

        <TextView
            android:id="@+id/tv_nav_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_tv_nav_person"
            android:textColor="@drawable/navigation_tv_status"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>