<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_user_card"
                android:layout_width="match_parent"
                android:layout_height="180dp">

                <ImageView
                    android:id="@+id/iv_user_card_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@color/colorGrey" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_user_chat_head"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@color/colorWhite" />

                <TextView
                    android:id="@+id/tv_user_net_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/iv_user_chat_head"
                    android:layout_below="@+id/iv_user_chat_head"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorTLightGrey" />

            <LinearLayout
                android:id="@+id/ll_option_index"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/index_grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/drawer_layout_tv_option_index"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_option_weather"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/weather_grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/drawer_layout_tv_option_weather"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_option_person"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/person_grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/drawer_layout_tv_option_person"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:background="@color/colorTLightGrey" />

            <LinearLayout
                android:id="@+id/ll_option_favourite"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/favourite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/drawer_layout_tv_option_favourite"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:background="@color/colorTLightGrey" />

            <LinearLayout
                android:id="@+id/ll_option_about"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="2dp"
                    android:src="@drawable/about" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/drawer_layout_tv_option_about"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTLightGrey" />

    <LinearLayout
        android:id="@+id/ll_option_quit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="2dp"
            android:src="@drawable/quit_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/drawer_layout_tv_option_quit"
            android:textColor="@color/colorBlack" />
    </LinearLayout>


</LinearLayout>